<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_inner_bg"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        app:titleTextColor="@color/black"
        android:title="@string/visitentrydetail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar3" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitentrydetail"
            android:layout_gravity="center"
            android:textColor="@color/toolbar"
            android:textSize="20sp"/>
        </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#81ffffff"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:background="@drawable/roundlayout">

            <TextView
                android:text="@string/MobileNo"
                android:textColor="#3c9c2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mbn"
                android:textSize="16sp"

                android:layout_alignBottom="@+id/imageView3"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_marginBottom="22dp" />

            <TextView
                android:text="@string/Name"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/textView5"

                android:layout_above="@+id/mbn"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/photoicon"
                android:id="@+id/imageView3"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="1dp"
                android:layout_gravity="center"
                android:contentDescription="@string/dummy_icon"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/sym_action_call"
                android:id="@+id/imageView4"
                android:contentDescription="@string/phone_icon"
                android:layout_below="@+id/textView5"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="570dp"
            android:layout_height="700dp"
            android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="30dp">

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/Visit_Purpose"
                    android:layout_weight="3"
                    android:id="@+id/textView10" />

                <!--<EditText
                    android:layout_width="270dp"
                    android:layout_height="60dp"
                    android:textSize="@dimen/edit_size"
                    android:layout_marginLeft="50dp"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextborder"
                    android:id="@+id/visit_purpose" />-->
                <Spinner
                    android:layout_width="100dp"
                    android:layout_height="50dp"

                    android:textColor="@color/black"
                    android:background="@drawable/edittextborder"
                    android:id="@+id/visit_purpose"
                    android:layout_weight="3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:layout_weight="0.82"
                    android:text="@string/Person_to_meet"
                    />

                <EditText
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:textCursorDrawable="@drawable/cursor_red"
                    android:paddingLeft="@dimen/start_text"

                    android:textColor="@color/black"
                    android:background="@drawable/edittextborder"
                    android:id="@+id/persontomeet" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/Time"

                    android:layout_weight="3"
                    />

                <EditText
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:textCursorDrawable="@drawable/cursor_red"
                    android:paddingLeft="@dimen/start_text"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextborder"
                    android:id="@+id/editText_time" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/Duration"

                    android:layout_weight="3" />

                <EditText
                    android:inputType="number"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:textCursorDrawable="@drawable/cursor_red"
                    android:paddingLeft="@dimen/start_text"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextborder"
                    android:id="@+id/editText_duration" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/Area"

                    android:layout_weight="3"/>

                <EditText
                    android:inputType="text"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:textCursorDrawable="@drawable/cursor_red"
                    android:paddingLeft="@dimen/start_text"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextborder"
                    android:id="@+id/editText_area"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="0dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/Material_no.1"

                    android:layout_weight="3" />

                <EditText
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:paddingLeft="@dimen/start_text"
                    android:textCursorDrawable="@drawable/cursor_red"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextborder"
                    android:id="@+id/editText_materialno1" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/Serial_no.1"

                    android:layout_weight="3"
                    android:id="@+id/textView9" />

                <EditText
                    android:inputType="number"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:paddingLeft="@dimen/start_text"
                    android:textCursorDrawable="@drawable/cursor_red"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextborder"
                    android:id="@+id/editText_serialno1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/Material_no.2"

                    android:layout_weight="3"
                    android:id="@+id/textView7" />

                <EditText
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:textCursorDrawable="@drawable/cursor_red"
                    android:paddingLeft="@dimen/start_text"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextborder"
                    android:id="@+id/editText_materialno2" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/Serial_no.2"

                    android:layout_weight="3"
                    android:id="@+id/textView6" />

                <EditText
                    android:inputType="number"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:textCursorDrawable="@drawable/cursor_red"
                    android:paddingLeft="@dimen/start_text"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextborder"
                    android:id="@+id/editText_serialno2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_marginBottom="120dp"
                >

                <Button
                    android:text="@string/Submit"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="18dp"

                    android:textColor="@color/txtcolor_search"
                    android:layout_marginStart="20dp"
                    android:onClick="visitorEntrySubmit"
                    android:background="@drawable/roundbutton1"
                    android:id="@+id/visitor_entry_submit" />
            </LinearLayout>
        </LinearLayout>

        </ScrollView>
    </LinearLayout>
 </LinearLayout>